<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Alex Jones
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Device Synchroniser</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sync_button_text">Synchronise Now</string>
    <string name="pref_host_name">Host Name</string>
    <string name="pref_host_name_summ">The name of the host to synchronise with</string>
    <string name="pref_root_dir">Storage root directory</string>
    <string name="pref_root_dir_summ">The directory where the external SD card is mounted</string>
    <string name="pref_host_port">Port</string>
    <string name="pref_host_name_port">The port on which the server is running</string>
    <string name="pref_since">Last synchronise time</string>
    <string name="pref_since_summ">The time the device was last synchronised</string>
    <string name="pref_offset">Last synchronise offset</string>
    <string name="pref_offset_summ">The offset to use when checking for newly synchronised files.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_username">Username</string>
    <string name="pref_username_summ">The name of the user who owns this device</string>
    <string name="notification_title">Device Synchroniser</string>
    <string name="notification_start_message">Contacting Server</string>
    <string name="notification_ongoing_message">%1$d/%2$d %3$s</string>
    <string name="notification_success_message">Synchronised %1$d file(s) successfully</string>
    <string name="notification_failure_message">Synchronisation failed: %1$s</string>
    <string name="permissions_button_text">Permissions</string>
    <string name="last_synchronised_text">Last synchronised at </string>
    <string name="last_synchronised_date_format">dd MMM yyy, HH:mm</string>
    <string name="never_synchronised">Never synchronised</string>
    <string name="album_cover_description">Album Cover</string>
    <string name="changes_pending">There are pending changes</string>
    <string name="no_changes_pending">There are no pending changes</string>
</resources>
